<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CECECE"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".menuPcpl">

    <Button
        android:id="@+id/optn"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:background="@drawable/engrenages" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btnMPcplRucher"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:text="@string/ruchers"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btnMPcplQRCode"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:text="@string/qrcode"
        android:textColor="#000000"
        android:textSize="20sp" />

</LinearLayout>
